added inital letter grid

--- a/index.html
+++ b/index.html
@@ -19,10 +19,54 @@
 </head>
 
 <body>
-<header >
+<header>
   <h1 class="page-header">Wordle Clone</h1>
 </header>
+
 <div id="separator"></div>
+<div class="loader-space">
+  <div class="loader">ldr</div>
+</div>
+
+<div class="container">
+  <div class="box a">A1</div>
+  <div class="box b">B1</div>
+  <div class="box c">C1</div>
+  <div class="box d">D1</div>
+  <div class="box e">E1</div>
+
+  <div class="box a">A2</div>
+  <div class="box b">B2</div>
+  <div class="box c">C2</div>
+  <div class="box d">D2</div>
+  <div class="box e">E2</div>
+
+  <div class="box a">A3</div>
+  <div class="box b">B3</div>
+  <div class="box c">C3</div>
+  <div class="box d">D3</div>
+  <div class="box e">E3</div>
+
+  <div class="box a">A4</div>
+  <div class="box b">B4</div>
+  <div class="box c">C4</div>
+  <div class="box d">D4</div>
+  <div class="box e">E4</div>
+
+  <div class="box a">A5</div>
+  <div class="box b">B5</div>
+  <div class="box c">C5</div>
+  <div class="box d">D5</div>
+  <div class="box e">E5</div>
+
+  <div class="box a">A6</div>
+  <div class="box b">B6</div>
+  <div class="box c">C6</div>
+  <div class="box d">D6</div>
+  <div class="box e">E6</div>
+</div>
+
+
 
 
 
