--- a/index.html
+++ b/index.html
@@ -25,49 +25,46 @@
 
 <div id="separator"></div>
 <div class="loader-space">
-  <div class="loader">ldr</div>
+  <div class="loader">*loader*</div>
 </div>
 
 <div class="container">
-  <div class="box a">A1</div>
-  <div class="box b">B1</div>
-  <div class="box c">C1</div>
-  <div class="box d">D1</div>
-  <div class="box e">E1</div>
+  <div class="letter-box letter-0"></div>
+  <div class="letter-box letter-1"></div>
+  <div class="letter-box letter-2"></div>
+  <div class="letter-box letter-3"></div>
+  <div class="letter-box letter-4"></div>
 
-  <div class="box a">A2</div>
-  <div class="box b">B2</div>
-  <div class="box c">C2</div>
-  <div class="box d">D2</div>
-  <div class="box e">E2</div>
+  <div class="letter-box letter-5"></div>
+  <div class="letter-box letter-6"></div>
+  <div class="letter-box letter-7"></div>
+  <div class="letter-box letter-8"></div>
+  <div class="letter-box letter-9"></div>
 
-  <div class="box a">A3</div>
-  <div class="box b">B3</div>
-  <div class="box c">C3</div>
-  <div class="box d">D3</div>
-  <div class="box e">E3</div>
+  <div class="letter-box letter-10"></div>
+  <div class="letter-box letter-11"></div>
+  <div class="letter-box letter-12"></div>
+  <div class="letter-box letter-13"></div>
+  <div class="letter-box letter-14"></div>
 
-  <div class="box a">A4</div>
-  <div class="box b">B4</div>
-  <div class="box c">C4</div>
-  <div class="box d">D4</div>
-  <div class="box e">E4</div>
+  <div class="letter-box letter-15"></div>
+  <div class="letter-box letter-16"></div>
+  <div class="letter-box letter-17"></div>
+  <div class="letter-box letter-18"></div>
+  <div class="letter-box letter-19"></div>
 
-  <div class="box a">A5</div>
-  <div class="box b">B5</div>
-  <div class="box c">C5</div>
-  <div class="box d">D5</div>
-  <div class="box e">E5</div>
+  <div class="letter-box letter-20"></div>
+  <div class="letter-box letter-21"></div>
+  <div class="letter-box letter-22"></div>
+  <div class="letter-box letter-23"></div>
+  <div class="letter-box letter-24"></div>
 
-  <div class="box a">A6</div>
-  <div class="box b">B6</div>
-  <div class="box c">C6</div>
-  <div class="box d">D6</div>
-  <div class="box e">E6</div>
+  <div class="letter-box letter-25"></div>
+  <div class="letter-box letter-26"></div>
+  <div class="letter-box letter-27"></div>
+  <div class="letter-box letter-28"></div>
+  <div class="letter-box letter-29"></div>
 </div>
-
-
-
 
 
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
