added dictionary toast

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -14,6 +14,7 @@
 
 
   <link href="css/main.css" rel="stylesheet">
+  <link href="css/toast.css" rel="stylesheet">
 
   <meta content="#fafafa" name="theme-color">
 </head>
@@ -28,6 +29,7 @@
   <div class="loader">*loader*</div>
 </div>
 
+<div id="toast">Not in the word list!</div>
 <div class="container">
   <div class="letter-box letter-0"></div>
   <div class="letter-box letter-1"></div>
