dictionary check done via api call

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="loader">*loader*</div>
 </div>
 
-<div id="toast">Not in the word list!</div>
+<div id="toast"></div>
 <div class="container">
   <div class="letter-box letter-0"></div>
   <div class="letter-box letter-1"></div>
