--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <link href="css/main.css" rel="stylesheet">
   <link href="css/toast.css" rel="stylesheet">
+  <link href="css/spinner.css" rel="stylesheet">
 
   <meta content="#fafafa" name="theme-color">
 </head>
@@ -26,7 +27,7 @@
 
 <div id="separator"></div>
 <div class="loader-space">
-  <div class="loader">*loader*</div>
+  <div hidden id="spinner"></div>
 </div>
 
 <div id="toast"></div>
