--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
   <div class="letter-box letter-29"></div>
 </div>
 
+<footer class="footer">Aleksandar Zeljkovic - <a href="https://www.zeljkovic.sh">www.zeljkovic.sh</a>
+</footer>
 
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/main.js"></script>
