formatting, fonts and comments improvement

--- a/index.html
+++ b/index.html
@@ -7,17 +7,12 @@
   <meta content="" name="description">
   <meta content="width=device-width, initial-scale=1" name="viewport">
 
-  <meta content="" property="og:title">
-  <meta content="" property="og:type">
-  <meta content="" property="og:url">
-  <meta content="" property="og:image">
-
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="css/toast.css" rel="stylesheet">
   <link href="css/spinner.css" rel="stylesheet">
-
-  <meta content="#fafafa" name="theme-color">
 </head>
 
 <body>
